# ghfdb-portal

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .slugignore  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  Dockerfile  Pipfile  Procfile  README.md  ThermoGlobe_new.bib  ThermoGlobe_new.bib.bak  bibliography.bib  bibtex.bib  db copy.sqlite3  demo.yml  docker-compose.yml  geocode.py  geoluminate.yml  global-heat-flow-database.code-workspace  lite.yml  local.yml  manage.py  plotly_test.html  plots.py  production-gfz.yml  production.insecure.yml  production.yml  pygeo_age.py  pyproject.toml  requirements.txt  selectize_sort.html  setup.cfg  stack.development.env  stack.local.env  staging.yml  (+9 more)
.envs/.local/: .django
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: milestone.md
.github/old/: docs.yml  publish-docker.yml
.github/workflows/: build.yml  ci.yml  docker-build-and-publish.yml  publish-docker.yml
.github/xworkflows/: ci.yml  publish-docker.yml  validate-codecov-config.yml
api/: access_policies.py  paginators.py  serialize.py  urls.py  utils.py  views.py
api/v1/: apps.py  download_views.py  renderers.py  serialize.py  throttling.py  urls.py  views.py
assets/ghfdb/: template.xlsx
assets/scss/: _bootstrap_variables.scss  _bs5_variables.scss  stylesheet.scss
cms_integration/: apps.py  cms_apps.py  cms_toolbars.py
compose/development/: django
compose/django/: local
compose/geoluminate/: lite  local  production
compose/production/: django  traefik  traefik.yml
config/: __init__.py  common.py  development.py  production.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  common.py  development.py  geoluminate.py  lite.py  local.py  production.py
dashboard/: urls.py  views.py
database/: __init__.py  admin.py  admin_dashboard.py  admin_forms.py  apps.py  choices.py  fields.py  models.py  querysets.py  resources.py  signals.py  widgets.py
database/migrations/: 0001_initial.py  0001_squashed_0037_auto_20220908_1406.py  0002_auto_20220908_1421.py  0002_initial.py  0003_alter_site_date_added.py  0003_auto_20220711_1239.py  0004_alter_site_last_modified.py  0004_auto_20220711_1301.py  0005_alter_interval_options.py  0005_rename_reference_site_references.py  0006_auto_20220711_1803.py  0007_correction_applied.py  0008_alter_correction_applied.py  0009_alter_correction_interval.py  0010_auto_20220712_1402.py  0011_auto_20220712_1405.py  0012_alter_interval_site.py  0013_alter_correction_type.py  0014_alter_correction_type.py  0015_alter_correction_type.py  0016_auto_20220712_1524.py  0017_auto_20220712_1553.py  0018_auto_20220713_1344.py  0019_auto_20220713_1422.py  0020_auto_20220713_1426.py  0021_auto_20220713_1524.py  0022_auto_20220713_1627.py  0023_auto_20220713_1639.py  0024_auto_20220714_1134.py  0025_auto_20220714_1938.py  0026_auto_20220805_1645.py  0027_auto_20220809_1708.py  0028_auto_20220815_1232.py  0029_alter_interval_bgs_lith.py  0030_alter_interval_bgs_lith.py  0031_alter_historicalinterval_bgs_lith.py  0032_auto_20220818_1253.py  0033_auto_20220823_1316.py  0034_auto_20220823_1637.py  (+2 more)
database/models/: __init__.py  choices.py  models.py
deploy/: development  production  start-django
deploy/config/: .django  (+3 more)
django_datacite/: admin.py  apps.py  forms.py  urls.py  views.py
docs/: Makefile  about.md  acknowledgements.md  conf.py  database.rst  deployment.rst  features.md  field_map.csv  field_map.xlsx  ghfdb.admin.rst  ghfdb.endpoints.rst  ghfdb.factories.rst  ghfdb.models.rst  ghfdb.rst  ghfdb_fields.md  index.md  index.rst  make.bat  models.md  review.views.rst  roadmap.md  whfd_project.md
editorial/: cms_plugins.py
fixtures/: dump.json  identity.json
geomodels/: admin.py  choices.py  models.py  utils.py
global_heat_flow/: settings.py  urls.py  wsgi.py
heat_flow/: admin.py  apps.py  config.py  factories.py  filters.py  forms.py  importer.py  menus.py  models.py  resources.py  tables.py  urls.py  views.py  vocabularies.py
heatflow/: cms_apps.py  cms_toolbars.py  settings.py  storage_backends.py  urls.py  wsgi.py
main/: 0001_initial.py  __init__.py  abstract.py  admin.py  admin_dashboard.py  apps.py  choices.py  filters.py  forms.py  import_choices.py  inlines.py  mixins.py  models.py  resources.py  tables.py  tests.py  urls.py  utils.py  views.py  widgets.py
mapping/: admin.py  forms.py  load.py  models copy.py  models.py  update.py  urls.py  utils.py  views copy.py  views.py
project/: __init__.py  dashboard.py  settings.py  urls.py  wsgi.py
publications/: ThermoGlobe.bib  admin.py  apps.py  bibtex.py  filters.py  forms.py  mixins.py  models.py  paginator.py  resources.py  signals.py  tables.py  urls.py  views.py  widgets.py
reference/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py  widgets.py
requirements/: base.txt  dev.txt  docs.txt  editable.txt  local.txt  production.txt
review/: admin.py  menu.py  models.py  urls.py  views.py
site_property/: apps.py  mixins.py  models.py
tables/: mixins.py  tables.py
templates/: 500.html  author_details.html  base.html  basemap.html  basic_list.html  bib_table.html  confirm_upload.html  describe.html  describe_field.html  explore.html  faqs.html  field_descriptions.html  home.html  landing_page.html  news.html  publication_details.html  publication_list.html  site_details.html  upload.html  upload_confirm.html  world_map.html
tests/: test_admin.py  test_forms.py  test_importer.py  test_models.py  test_urls.py
thermal_data/: admin.py  models.py  resources.py
thermoglobe/: __init__.py  abstract.py  admin.py  apps.py  choices copy 2.py  choices.py  filters.py  forms.py  import_choices.py  inlines.py  managers.py  mixins.py  models.py  plotly_python.py  plots.py  resources.py  tables.py  units.py  urls.py  utils.py  views.py  widgets.py
thermoglobe_integration/: apps.py  cms_toolbars.py
uploads/: admin.py  forms.py  models.py  urls.py  views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
well_logs/: admin.py  apps.py  resources.py
(+883 files in other folders)
