[tool.poetry]
name = "global-heat-flow-database"
version = "0.0.0"
description = "Code base for the IHFC's Global Heat Flow Database web application"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/WorldHeatFlowDatabase/world-heat-flow-database"
packages = [
    { include = "schemas", from = "project" },
]
include = ["LICENSE", "README.md", "requirements.txt"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"World Heat Flow Database Project" = "https://heatflow.world"
"IHFC" = "http://ihfc-iugg.org"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^4.2.1"
geoluminate = {git = "https://github.com/Geoluminate/geoluminate.git", rev = "main"}
django-pint = "^0.7.1"
django-environ = "^0.10.0"
flower = "^1.2.0"
django-formset = "<1.3"
django-research-vocabs = {git = "https://github.com/Geoluminate/django-research-vocabs.git", branch="master"}
django-content-license = {git = "https://github.com/Geoluminate/django-content-license.git", branch="main"}


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
pytest = "^7.2.2"
django-coverage-plugin = "^3.0.0"
pytest-django = "^4.5.2"
django-stubs = "^1.15.0"
pylint-django = "^2.5.3"
invoke = "^2.0.0"
tox = "^4.4.6"
deptry = "^0.8.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.17"
types-python-dateutil = "^2.8.19.12"
pytest-sugar = "^0.9.7"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
djangorestframework-stubs = "^1.9.1"
flake8-isort = "^6.0.0"
pylint-celery = "^0.3"
django-debug-toolbar-template-profiler = "^2.1.0"
ipdb = "^0.13.11"
watchfiles = "^0.18.1"
django-redis = "^5.2.0"
geoluminate-docs = {git = "https://github.com/Geoluminate/geoluminate-docs.git", rev = "21f7a7da5a1e1f6903707430eeddd7bd354c7247"}
factory-boy = "^3.3.0"
django-werkzeug = "^1.0.0"


[tool.poetry.group.production.dependencies]
sentry-sdk = {extras = ["django"], version = "^1.17.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["project"]
disallow_untyped_defs = "False"
disallow_any_unimported = "False"
ignore_missing_imports = "True"
no_implicit_optional = "True"
check_untyped_defs = "False"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = ["docs/","migrations/","tests/settings.py"]
mypy_path = "project/"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
exclude = ['docs/']
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101","S105"]
# "**/models.py" = ["A003",]
# "docs/conf.py" = ["*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
reuse_db = true
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
filterwarnings = [
    "ignore",
    "default:::laboratory",
]


[tool.coverage.report]
skip_empty = true
omit = [
    "*site-packages*",
    "*tests*",
    "*.tox*",
    ]
show_missing = "true"

[tool.coverage.run]
branch = "true"
source = ["laboratory"]


[tool.deptry]
skip_misplaced_dev = "true"
extend_exclude = [
    "tasks.py",
    "docs",
    ".*tests",
]
ignore_transitive = [
    "toml",
    "sentry_sdk",
]

ignore_missing = [
    "ghfdb",
]

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py38, py39, py310, py311

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
passenv = PYTHON_VERSION
allowlist_externals = poetry
commands =
    poetry install -v --without docs
    pytest --doctest-modules tests --cov --cov-config=pyproject.toml --cov-report=xml
    mypy
"""
